2_Parser/loucomp/y.output
Terminals unused in grammar

   ERROR


State 98 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: declaration_list

    2 declaration_list: declaration_list declaration
    3                 | declaration

    4 declaration: var_declaration
    5            | fun_declaration

    6 var_declaration: type_specifier identifier SEMI
    7                | type_specifier identifier LBRACE NUM RBRACE SEMI

    8 type_specifier: INT
    9               | VOID

   10 fun_declaration: type_specifier identifier LPAREN params RPAREN compound_stmt

   11 params: param_list
   12       | VOID

   13 param_list: param_list COMMA param
   14           | param

   15 param: type_specifier identifier
   16      | type_specifier identifier LBRACE RBRACE

   17 compound_stmt: LCURLY local_declarations statement_list RCURLY

   18 local_declarations: local_declarations var_declaration
   19                   | %empty

   20 statement_list: statement_list statement
   21               | %empty

   22 statement: expression_stmt
   23          | compound_stmt
   24          | selection_stmt
   25          | iteration_stmt
   26          | return_stmt

   27 expression_stmt: expression SEMI
   28                | SEMI

   29 selection_stmt: IF LPAREN expression RPAREN statement
   30               | IF LPAREN expression RPAREN statement ELSE statement

   31 iteration_stmt: WHILE LPAREN expression RPAREN statement

   32 return_stmt: RETURN SEMI
   33            | RETURN expression SEMI

   34 expression: var ASSIGN expression
   35           | simple_expression

   36 var: identifier
   37    | identifier LBRACE expression RBRACE

   38 identifier: ID

   39 simple_expression: additive_expression relop additive_expression
   40                  | additive_expression

   41 relop: LT
   42      | LE
   43      | GT
   44      | GE
   45      | EQ
   46      | NE

   47 additive_expression: additive_expression addop term
   48                    | term

   49 addop: PLUS
   50      | MINUS

   51 term: term mulop factor
   52     | factor

   53 mulop: TIMES
   54      | OVER

   55 factor: LPAREN expression RPAREN
   56       | var
   57       | call
   58       | NUM

   59 call: identifier LPAREN args RPAREN

   60 args: arg_list
   61     | %empty

   62 arg_list: arg_list COMMA expression
   63         | expression


Terminals, with rules where they appear

$end (0) 0
error (256)
IF (258) 29 30
ELSE (259) 30
WHILE (260) 31
INT (261) 8
VOID (262) 9 12
RETURN (263) 32 33
ID (264) 38
NUM (265) 7 58
PLUS (266) 49
MINUS (267) 50
TIMES (268) 53
OVER (269) 54
EQ (270) 45
NE (271) 46
LT (272) 41
LE (273) 42
GT (274) 43
GE (275) 44
LPAREN (276) 10 29 30 31 55 59
RPAREN (277) 10 29 30 31 55 59
LBRACE (278) 7 16 37
RBRACE (279) 7 16 37
LCURLY (280) 17
RCURLY (281) 17
ASSIGN (282) 34
SEMI (283) 6 7 27 28 32 33
COMMA (284) 13 62
ERROR (285)


Nonterminals, with rules where they appear

$accept (31)
    on left: 0
program (32)
    on left: 1, on right: 0
declaration_list (33)
    on left: 2 3, on right: 1 2
declaration (34)
    on left: 4 5, on right: 2 3
var_declaration (35)
    on left: 6 7, on right: 4 18
type_specifier (36)
    on left: 8 9, on right: 6 7 10 15 16
fun_declaration (37)
    on left: 10, on right: 5
params (38)
    on left: 11 12, on right: 10
param_list (39)
    on left: 13 14, on right: 11 13
param (40)
    on left: 15 16, on right: 13 14
compound_stmt (41)
    on left: 17, on right: 10 23
local_declarations (42)
    on left: 18 19, on right: 17 18
statement_list (43)
    on left: 20 21, on right: 17 20
statement (44)
    on left: 22 23 24 25 26, on right: 20 29 30 31
expression_stmt (45)
    on left: 27 28, on right: 22
selection_stmt (46)
    on left: 29 30, on right: 24
iteration_stmt (47)
    on left: 31, on right: 25
return_stmt (48)
    on left: 32 33, on right: 26
expression (49)
    on left: 34 35, on right: 27 29 30 31 33 34 37 55 62 63
var (50)
    on left: 36 37, on right: 34 56
identifier (51)
    on left: 38, on right: 6 7 10 15 16 36 37 59
simple_expression (52)
    on left: 39 40, on right: 35
relop (53)
    on left: 41 42 43 44 45 46, on right: 39
additive_expression (54)
    on left: 47 48, on right: 39 40 47
addop (55)
    on left: 49 50, on right: 47
term (56)
    on left: 51 52, on right: 47 48 51
mulop (57)
    on left: 53 54, on right: 51
factor (58)
    on left: 55 56 57 58, on right: 51 52
call (59)
    on left: 59, on right: 57
args (60)
    on left: 60 61, on right: 59
arg_list (61)
    on left: 62 63, on right: 60 62


State 0

    0 $accept: . program $end

    INT   shift, and go to state 1
    VOID  shift, and go to state 2

    program           go to state 3
    declaration_list  go to state 4
    declaration       go to state 5
    var_declaration   go to state 6
    type_specifier    go to state 7
    fun_declaration   go to state 8


State 1

    8 type_specifier: INT .

    $default  reduce using rule 8 (type_specifier)


State 2

    9 type_specifier: VOID .

    $default  reduce using rule 9 (type_specifier)


State 3

    0 $accept: program . $end

    $end  shift, and go to state 9


State 4

    1 program: declaration_list .
    2 declaration_list: declaration_list . declaration

    INT   shift, and go to state 1
    VOID  shift, and go to state 2

    $default  reduce using rule 1 (program)

    declaration      go to state 10
    var_declaration  go to state 6
    type_specifier   go to state 7
    fun_declaration  go to state 8


State 5

    3 declaration_list: declaration .

    $default  reduce using rule 3 (declaration_list)


State 6

    4 declaration: var_declaration .

    $default  reduce using rule 4 (declaration)


State 7

    6 var_declaration: type_specifier . identifier SEMI
    7                | type_specifier . identifier LBRACE NUM RBRACE SEMI
   10 fun_declaration: type_specifier . identifier LPAREN params RPAREN compound_stmt

    ID  shift, and go to state 11

    identifier  go to state 12


State 8

    5 declaration: fun_declaration .

    $default  reduce using rule 5 (declaration)


State 9

    0 $accept: program $end .

    $default  accept


State 10

    2 declaration_list: declaration_list declaration .

    $default  reduce using rule 2 (declaration_list)


State 11

   38 identifier: ID .

    $default  reduce using rule 38 (identifier)


State 12

    6 var_declaration: type_specifier identifier . SEMI
    7                | type_specifier identifier . LBRACE NUM RBRACE SEMI
   10 fun_declaration: type_specifier identifier . LPAREN params RPAREN compound_stmt

    LPAREN  shift, and go to state 13
    LBRACE  shift, and go to state 14
    SEMI    shift, and go to state 15


State 13

   10 fun_declaration: type_specifier identifier LPAREN . params RPAREN compound_stmt

    INT   shift, and go to state 1
    VOID  shift, and go to state 16

    type_specifier  go to state 17
    params          go to state 18
    param_list      go to state 19
    param           go to state 20


State 14

    7 var_declaration: type_specifier identifier LBRACE . NUM RBRACE SEMI

    NUM  shift, and go to state 21


State 15

    6 var_declaration: type_specifier identifier SEMI .

    $default  reduce using rule 6 (var_declaration)


State 16

    9 type_specifier: VOID .
   12 params: VOID .

    RPAREN    reduce using rule 12 (params)
    $default  reduce using rule 9 (type_specifier)


State 17

   15 param: type_specifier . identifier
   16      | type_specifier . identifier LBRACE RBRACE

    ID  shift, and go to state 11

    identifier  go to state 22


State 18

   10 fun_declaration: type_specifier identifier LPAREN params . RPAREN compound_stmt

    RPAREN  shift, and go to state 23


State 19

   11 params: param_list .
   13 param_list: param_list . COMMA param

    COMMA  shift, and go to state 24

    $default  reduce using rule 11 (params)


State 20

   14 param_list: param .

    $default  reduce using rule 14 (param_list)


State 21

    7 var_declaration: type_specifier identifier LBRACE NUM . RBRACE SEMI

    RBRACE  shift, and go to state 25


State 22

   15 param: type_specifier identifier .
   16      | type_specifier identifier . LBRACE RBRACE

    LBRACE  shift, and go to state 26

    $default  reduce using rule 15 (param)


State 23

   10 fun_declaration: type_specifier identifier LPAREN params RPAREN . compound_stmt

    LCURLY  shift, and go to state 27

    compound_stmt  go to state 28


State 24

   13 param_list: param_list COMMA . param

    INT   shift, and go to state 1
    VOID  shift, and go to state 2

    type_specifier  go to state 17
    param           go to state 29


State 25

    7 var_declaration: type_specifier identifier LBRACE NUM RBRACE . SEMI

    SEMI  shift, and go to state 30


State 26

   16 param: type_specifier identifier LBRACE . RBRACE

    RBRACE  shift, and go to state 31


State 27

   17 compound_stmt: LCURLY . local_declarations statement_list RCURLY

    $default  reduce using rule 19 (local_declarations)

    local_declarations  go to state 32


State 28

   10 fun_declaration: type_specifier identifier LPAREN params RPAREN compound_stmt .

    $default  reduce using rule 10 (fun_declaration)


State 29

   13 param_list: param_list COMMA param .

    $default  reduce using rule 13 (param_list)


State 30

    7 var_declaration: type_specifier identifier LBRACE NUM RBRACE SEMI .

    $default  reduce using rule 7 (var_declaration)


State 31

   16 param: type_specifier identifier LBRACE RBRACE .

    $default  reduce using rule 16 (param)


State 32

   17 compound_stmt: LCURLY local_declarations . statement_list RCURLY
   18 local_declarations: local_declarations . var_declaration

    INT   shift, and go to state 1
    VOID  shift, and go to state 2

    $default  reduce using rule 21 (statement_list)

    var_declaration  go to state 33
    type_specifier   go to state 34
    statement_list   go to state 35


State 33

   18 local_declarations: local_declarations var_declaration .

    $default  reduce using rule 18 (local_declarations)


State 34

    6 var_declaration: type_specifier . identifier SEMI
    7                | type_specifier . identifier LBRACE NUM RBRACE SEMI

    ID  shift, and go to state 11

    identifier  go to state 36


State 35

   17 compound_stmt: LCURLY local_declarations statement_list . RCURLY
   20 statement_list: statement_list . statement

    IF      shift, and go to state 37
    WHILE   shift, and go to state 38
    RETURN  shift, and go to state 39
    ID      shift, and go to state 11
    NUM     shift, and go to state 40
    LPAREN  shift, and go to state 41
    LCURLY  shift, and go to state 27
    RCURLY  shift, and go to state 42
    SEMI    shift, and go to state 43

    compound_stmt        go to state 44
    statement            go to state 45
    expression_stmt      go to state 46
    selection_stmt       go to state 47
    iteration_stmt       go to state 48
    return_stmt          go to state 49
    expression           go to state 50
    var                  go to state 51
    identifier           go to state 52
    simple_expression    go to state 53
    additive_expression  go to state 54
    term                 go to state 55
    factor               go to state 56
    call                 go to state 57


State 36

    6 var_declaration: type_specifier identifier . SEMI
    7                | type_specifier identifier . LBRACE NUM RBRACE SEMI

    LBRACE  shift, and go to state 14
    SEMI    shift, and go to state 15


State 37

   29 selection_stmt: IF . LPAREN expression RPAREN statement
   30               | IF . LPAREN expression RPAREN statement ELSE statement

    LPAREN  shift, and go to state 58


State 38

   31 iteration_stmt: WHILE . LPAREN expression RPAREN statement

    LPAREN  shift, and go to state 59


State 39

   32 return_stmt: RETURN . SEMI
   33            | RETURN . expression SEMI

    ID      shift, and go to state 11
    NUM     shift, and go to state 40
    LPAREN  shift, and go to state 41
    SEMI    shift, and go to state 60

    expression           go to state 61
    var                  go to state 51
    identifier           go to state 52
    simple_expression    go to state 53
    additive_expression  go to state 54
    term                 go to state 55
    factor               go to state 56
    call                 go to state 57


State 40

   58 factor: NUM .

    $default  reduce using rule 58 (factor)


State 41

   55 factor: LPAREN . expression RPAREN

    ID      shift, and go to state 11
    NUM     shift, and go to state 40
    LPAREN  shift, and go to state 41

    expression           go to state 62
    var                  go to state 51
    identifier           go to state 52
    simple_expression    go to state 53
    additive_expression  go to state 54
    term                 go to state 55
    factor               go to state 56
    call                 go to state 57


State 42

   17 compound_stmt: LCURLY local_declarations statement_list RCURLY .

    $default  reduce using rule 17 (compound_stmt)


State 43

   28 expression_stmt: SEMI .

    $default  reduce using rule 28 (expression_stmt)


State 44

   23 statement: compound_stmt .

    $default  reduce using rule 23 (statement)


State 45

   20 statement_list: statement_list statement .

    $default  reduce using rule 20 (statement_list)


State 46

   22 statement: expression_stmt .

    $default  reduce using rule 22 (statement)


State 47

   24 statement: selection_stmt .

    $default  reduce using rule 24 (statement)


State 48

   25 statement: iteration_stmt .

    $default  reduce using rule 25 (statement)


State 49

   26 statement: return_stmt .

    $default  reduce using rule 26 (statement)


State 50

   27 expression_stmt: expression . SEMI

    SEMI  shift, and go to state 63


State 51

   34 expression: var . ASSIGN expression
   56 factor: var .

    ASSIGN  shift, and go to state 64

    $default  reduce using rule 56 (factor)


State 52

   36 var: identifier .
   37    | identifier . LBRACE expression RBRACE
   59 call: identifier . LPAREN args RPAREN

    LPAREN  shift, and go to state 65
    LBRACE  shift, and go to state 66

    $default  reduce using rule 36 (var)


State 53

   35 expression: simple_expression .

    $default  reduce using rule 35 (expression)


State 54

   39 simple_expression: additive_expression . relop additive_expression
   40                  | additive_expression .
   47 additive_expression: additive_expression . addop term

    PLUS   shift, and go to state 67
    MINUS  shift, and go to state 68
    EQ     shift, and go to state 69
    NE     shift, and go to state 70
    LT     shift, and go to state 71
    LE     shift, and go to state 72
    GT     shift, and go to state 73
    GE     shift, and go to state 74

    $default  reduce using rule 40 (simple_expression)

    relop  go to state 75
    addop  go to state 76


State 55

   48 additive_expression: term .
   51 term: term . mulop factor

    TIMES  shift, and go to state 77
    OVER   shift, and go to state 78

    $default  reduce using rule 48 (additive_expression)

    mulop  go to state 79


State 56

   52 term: factor .

    $default  reduce using rule 52 (term)


State 57

   57 factor: call .

    $default  reduce using rule 57 (factor)


State 58

   29 selection_stmt: IF LPAREN . expression RPAREN statement
   30               | IF LPAREN . expression RPAREN statement ELSE statement

    ID      shift, and go to state 11
    NUM     shift, and go to state 40
    LPAREN  shift, and go to state 41

    expression           go to state 80
    var                  go to state 51
    identifier           go to state 52
    simple_expression    go to state 53
    additive_expression  go to state 54
    term                 go to state 55
    factor               go to state 56
    call                 go to state 57


State 59

   31 iteration_stmt: WHILE LPAREN . expression RPAREN statement

    ID      shift, and go to state 11
    NUM     shift, and go to state 40
    LPAREN  shift, and go to state 41

    expression           go to state 81
    var                  go to state 51
    identifier           go to state 52
    simple_expression    go to state 53
    additive_expression  go to state 54
    term                 go to state 55
    factor               go to state 56
    call                 go to state 57


State 60

   32 return_stmt: RETURN SEMI .

    $default  reduce using rule 32 (return_stmt)


State 61

   33 return_stmt: RETURN expression . SEMI

    SEMI  shift, and go to state 82


State 62

   55 factor: LPAREN expression . RPAREN

    RPAREN  shift, and go to state 83


State 63

   27 expression_stmt: expression SEMI .

    $default  reduce using rule 27 (expression_stmt)


State 64

   34 expression: var ASSIGN . expression

    ID      shift, and go to state 11
    NUM     shift, and go to state 40
    LPAREN  shift, and go to state 41

    expression           go to state 84
    var                  go to state 51
    identifier           go to state 52
    simple_expression    go to state 53
    additive_expression  go to state 54
    term                 go to state 55
    factor               go to state 56
    call                 go to state 57


State 65

   59 call: identifier LPAREN . args RPAREN

    ID      shift, and go to state 11
    NUM     shift, and go to state 40
    LPAREN  shift, and go to state 41

    $default  reduce using rule 61 (args)

    expression           go to state 85
    var                  go to state 51
    identifier           go to state 52
    simple_expression    go to state 53
    additive_expression  go to state 54
    term                 go to state 55
    factor               go to state 56
    call                 go to state 57
    args                 go to state 86
    arg_list             go to state 87


State 66

   37 var: identifier LBRACE . expression RBRACE

    ID      shift, and go to state 11
    NUM     shift, and go to state 40
    LPAREN  shift, and go to state 41

    expression           go to state 88
    var                  go to state 51
    identifier           go to state 52
    simple_expression    go to state 53
    additive_expression  go to state 54
    term                 go to state 55
    factor               go to state 56
    call                 go to state 57


State 67

   49 addop: PLUS .

    $default  reduce using rule 49 (addop)


State 68

   50 addop: MINUS .

    $default  reduce using rule 50 (addop)


State 69

   45 relop: EQ .

    $default  reduce using rule 45 (relop)


State 70

   46 relop: NE .

    $default  reduce using rule 46 (relop)


State 71

   41 relop: LT .

    $default  reduce using rule 41 (relop)


State 72

   42 relop: LE .

    $default  reduce using rule 42 (relop)


State 73

   43 relop: GT .

    $default  reduce using rule 43 (relop)


State 74

   44 relop: GE .

    $default  reduce using rule 44 (relop)


State 75

   39 simple_expression: additive_expression relop . additive_expression

    ID      shift, and go to state 11
    NUM     shift, and go to state 40
    LPAREN  shift, and go to state 41

    var                  go to state 89
    identifier           go to state 52
    additive_expression  go to state 90
    term                 go to state 55
    factor               go to state 56
    call                 go to state 57


State 76

   47 additive_expression: additive_expression addop . term

    ID      shift, and go to state 11
    NUM     shift, and go to state 40
    LPAREN  shift, and go to state 41

    var         go to state 89
    identifier  go to state 52
    term        go to state 91
    factor      go to state 56
    call        go to state 57


State 77

   53 mulop: TIMES .

    $default  reduce using rule 53 (mulop)


State 78

   54 mulop: OVER .

    $default  reduce using rule 54 (mulop)


State 79

   51 term: term mulop . factor

    ID      shift, and go to state 11
    NUM     shift, and go to state 40
    LPAREN  shift, and go to state 41

    var         go to state 89
    identifier  go to state 52
    factor      go to state 92
    call        go to state 57


State 80

   29 selection_stmt: IF LPAREN expression . RPAREN statement
   30               | IF LPAREN expression . RPAREN statement ELSE statement

    RPAREN  shift, and go to state 93


State 81

   31 iteration_stmt: WHILE LPAREN expression . RPAREN statement

    RPAREN  shift, and go to state 94


State 82

   33 return_stmt: RETURN expression SEMI .

    $default  reduce using rule 33 (return_stmt)


State 83

   55 factor: LPAREN expression RPAREN .

    $default  reduce using rule 55 (factor)


State 84

   34 expression: var ASSIGN expression .

    $default  reduce using rule 34 (expression)


State 85

   63 arg_list: expression .

    $default  reduce using rule 63 (arg_list)


State 86

   59 call: identifier LPAREN args . RPAREN

    RPAREN  shift, and go to state 95


State 87

   60 args: arg_list .
   62 arg_list: arg_list . COMMA expression

    COMMA  shift, and go to state 96

    $default  reduce using rule 60 (args)


State 88

   37 var: identifier LBRACE expression . RBRACE

    RBRACE  shift, and go to state 97


State 89

   56 factor: var .

    $default  reduce using rule 56 (factor)


State 90

   39 simple_expression: additive_expression relop additive_expression .
   47 additive_expression: additive_expression . addop term

    PLUS   shift, and go to state 67
    MINUS  shift, and go to state 68

    $default  reduce using rule 39 (simple_expression)

    addop  go to state 76


State 91

   47 additive_expression: additive_expression addop term .
   51 term: term . mulop factor

    TIMES  shift, and go to state 77
    OVER   shift, and go to state 78

    $default  reduce using rule 47 (additive_expression)

    mulop  go to state 79


State 92

   51 term: term mulop factor .

    $default  reduce using rule 51 (term)


State 93

   29 selection_stmt: IF LPAREN expression RPAREN . statement
   30               | IF LPAREN expression RPAREN . statement ELSE statement

    IF      shift, and go to state 37
    WHILE   shift, and go to state 38
    RETURN  shift, and go to state 39
    ID      shift, and go to state 11
    NUM     shift, and go to state 40
    LPAREN  shift, and go to state 41
    LCURLY  shift, and go to state 27
    SEMI    shift, and go to state 43

    compound_stmt        go to state 44
    statement            go to state 98
    expression_stmt      go to state 46
    selection_stmt       go to state 47
    iteration_stmt       go to state 48
    return_stmt          go to state 49
    expression           go to state 50
    var                  go to state 51
    identifier           go to state 52
    simple_expression    go to state 53
    additive_expression  go to state 54
    term                 go to state 55
    factor               go to state 56
    call                 go to state 57


State 94

   31 iteration_stmt: WHILE LPAREN expression RPAREN . statement

    IF      shift, and go to state 37
    WHILE   shift, and go to state 38
    RETURN  shift, and go to state 39
    ID      shift, and go to state 11
    NUM     shift, and go to state 40
    LPAREN  shift, and go to state 41
    LCURLY  shift, and go to state 27
    SEMI    shift, and go to state 43

    compound_stmt        go to state 44
    statement            go to state 99
    expression_stmt      go to state 46
    selection_stmt       go to state 47
    iteration_stmt       go to state 48
    return_stmt          go to state 49
    expression           go to state 50
    var                  go to state 51
    identifier           go to state 52
    simple_expression    go to state 53
    additive_expression  go to state 54
    term                 go to state 55
    factor               go to state 56
    call                 go to state 57


State 95

   59 call: identifier LPAREN args RPAREN .

    $default  reduce using rule 59 (call)


State 96

   62 arg_list: arg_list COMMA . expression

    ID      shift, and go to state 11
    NUM     shift, and go to state 40
    LPAREN  shift, and go to state 41

    expression           go to state 100
    var                  go to state 51
    identifier           go to state 52
    simple_expression    go to state 53
    additive_expression  go to state 54
    term                 go to state 55
    factor               go to state 56
    call                 go to state 57


State 97

   37 var: identifier LBRACE expression RBRACE .

    $default  reduce using rule 37 (var)


State 98

   29 selection_stmt: IF LPAREN expression RPAREN statement .
   30               | IF LPAREN expression RPAREN statement . ELSE statement

    ELSE  shift, and go to state 101

    ELSE      [reduce using rule 29 (selection_stmt)]
    $default  reduce using rule 29 (selection_stmt)


State 99

   31 iteration_stmt: WHILE LPAREN expression RPAREN statement .

    $default  reduce using rule 31 (iteration_stmt)


State 100

   62 arg_list: arg_list COMMA expression .

    $default  reduce using rule 62 (arg_list)


State 101

   30 selection_stmt: IF LPAREN expression RPAREN statement ELSE . statement

    IF      shift, and go to state 37
    WHILE   shift, and go to state 38
    RETURN  shift, and go to state 39
    ID      shift, and go to state 11
    NUM     shift, and go to state 40
    LPAREN  shift, and go to state 41
    LCURLY  shift, and go to state 27
    SEMI    shift, and go to state 43

    compound_stmt        go to state 44
    statement            go to state 102
    expression_stmt      go to state 46
    selection_stmt       go to state 47
    iteration_stmt       go to state 48
    return_stmt          go to state 49
    expression           go to state 50
    var                  go to state 51
    identifier           go to state 52
    simple_expression    go to state 53
    additive_expression  go to state 54
    term                 go to state 55
    factor               go to state 56
    call                 go to state 57


State 102

   30 selection_stmt: IF LPAREN expression RPAREN statement ELSE statement .

    $default  reduce using rule 30 (selection_stmt)
